[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Cas2Smi"
version = "1.0"
description = "A script to convert CAS to SMILES"
readme = "README.md"
authors = [
    {name = "Thua-Phong Lam", email = "lamthuaphong@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = ["drug design"]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "requests",
]

[project.urls]
Homepage = "https://github.com/phonglam3103/cas2smi.git"

[project.scripts]
cas2smi = "cas2smi.cas2smi:main"

[tool.setuptools]
packages = ["cas2smi"]


